added comments, started on stand logic